syntax = "proto3";

package shorturls.generator.messages.v1;

import "shorturls/management/messages/v1/short_url.proto";

option go_package = "messages/v1";

message CreateShortURLResponse {
  shorturls.management.messages.v1.ShortURL short_url = 1;
}
